3.8.10 (XX//XX/2014)
- fixed problem parsing map viz options when values are not valid
- fixed interaction in IE8

3.8.09 (04//04/2014)
- fixed map instanciation when named map has no layer information

3.8.08 (03//04/2014)
- fixed layer visibility

3.8.07 (03//04/2014)
- fixed attribution position for gmaps
- fixed maps api request when all the layers are hidden
- fixed error in gmaps when tile loading raises an error
- fixed panBy on leaflet when torque layers are used

3.8.06 (27//03//2014)
- fixed layer interaction is not disabled when sublayer is hidden

3.8.05 (25//03/2014)
- update torque library
- fixed interaction with naned maps when there is a hidden layer
- added multiple metrics

3.8.04 (20//03//2014)
- prevent the scrolling of the map when the user scrolls the infowindow content.
- enables the scrollwheel when the user enters in the fullscreen model.
- fixes the embed_map url in the share dialog.
- raised leaflet maxZoom from 18 to 30
- fixed setting interactivity in private layers should raise an exception (#108)
- added metrics for tile and layergroup loading time

3.8.03 (15//03//2014)
- fixed addCursorInteraction
- fixed fieldCount when there are no fields in infowindow

3.8.02 (14//03//2014)
- use cdn_url from tiler requests
- use https to fetch infowindow data when https is used
- changes default target for the fullscreen option in embeds

3.8.01 (13//03/2014)
- fixed nokia https to http url rewrite

3.8.00 (11//03//2014)
- Added mouseover and mouseout for layers
- Fixed error in old IE browsers for torque visualizations.
- Changed CartoDB attribution style under google maps.

3.7.07 (10//03//2014)
- Fixes infowindow placement in fullscreen mode.

3.7.06 (07//03//2014)
- alternate_names in infowindow was not being honored

3.7.05 (06//03//2014)
- Added setParams method to layer to support named maps (#106)
- fixed problems with infowindow when there are hidden layers

3.7.04 (27//02//2014)
- fixed layer update in gmaps 